# lounge-gtk-theme

./: .gitattributes  .gitignore  CHANGELOG  COPYRIGHT  README.md  copy-gtk-dark-to-night-theme.py  meson.build  meson_options.txt
Lounge/: index.theme
Lounge/gnome-shell/: gnome-shell.css
Lounge/gnome-shell/.sass-cache/1ce6e7cd64bde68e896762c4e7d2684dcc87e4d9/: _common.scssc  _drawing.scssc
Lounge/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss
Lounge/gtk-2.0/: render-assets-external.sh
Lounge/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _drawing.scss  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-dark.css
fedora-spec/: lounge-gtk-theme-xfce-sway.spec  lounge-gtk-theme.spec  lounge.spec
firefox-tweak/: userChrome.css
firefox-tweak-dark/: userChrome.css
gnome-shell/: meson.build
gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss
gtk-2.0/: assets.txt  gtkrc  main.rc  meson.build
gtk-3.0/: _colors.scss  _common.scss  _drawing.scss  apps.css  assets.txt  gtk-contained-dark.css  gtk-contained.css  gtk.css  meson.build
src/: index.theme-dark  index.theme.in
src/aux-icons/: aux-iconslist  index.theme  meson.build  post_install.py  render-icons.sh
src/gnome-shell/: _colors-shell.scss  _common-shell-3-28.scss  _common-shell-3-30.scss  _common-shell.scss  _drawing-shell.scss  gnome-shell-3-28.scss  gnome-shell-3-30.scss  gnome-shell-dark.scss  gnome-shell.css  gnome-shell.scss  render-cut-assets.sh  shell-assets.txt  shell-colors.scss  shell-common.scss  shell-drawing.scss  shell-extensions.scss
src/gnome-shell/.sass-cache/1ce6e7cd64bde68e896762c4e7d2684dcc87e4d9/: _colors.scssc
src/gnome-shell/.sass-cache/694a62b1aebbbad71df1ce1aebb9bce4db1a654b/: gnome-shell.scssc
src/gnome-shell/.sass-cache/75abc22783f31ca7ba656eea9cdfb07516831aa2/: _colors.scssc  _common.scssc  _drawing.scssc
src/gnome-shell/.sass-cache/f1e15a56907ab810011c87ade1023c7bc89a6d16/: gnome-shell.scssc
src/gnome-shell/gnome-shell-sass/: _colors.scss  _common-3-28.scss  _common-3-30.scss  _common.scss
src/gtk-2.0/: assets.txt  gtkrc  main.rc
src/gtk-2.0-dark/: assets.txt  gtkrc  render-assets.sh
src/gtk-3.0/: _apps-3-28.scss  _apps-3-30.scss  _apps.scss  _colors-public.scss  _colors.scss  _common-3-22.scss  _common-3-24.scss  _common.scss  _drawing.scss  assets.txt  gtk-3-28.scss  gtk-3-30.scss  gtk-contained-dark.css  gtk-contained.css  gtk-dark-3-28.scss  gtk-dark-3-30.scss  gtk.scss
src/gtk2/: apps.rc  apps.rc.in  assets-extra.txt  assets.txt  gtkrc  gtkrc.in  hacks.rc.in  main.rc  main.rc.in  render-assets-extra.sh  render-assets.sh  xfce.rc  xfce.rc.in
src/gtk2-dark/: apps.rc  assets.txt  gtkrc  main.rc  xfce.rc
src/gtk3/: _apps-nautilus-3-28.scss  _apps-nautilus-3-30.scss  _apps.scss  _colors.scss  _common-3-22.scss  _common-3-24.scss  _common.scss  _drawing.scss  _xfce.scss  assets.txt  gtk-dark.scss  gtk.scss  gtk3-apps.scss  gtk3-colors-public.scss  gtk3-colors.scss  gtk3-common.scss  gtk3-dark.scss  gtk3-drawing.scss  gtk3-libhandy.scss  gtk3-variables.scss  gtk3-xfce.scss  gtk3.scss  render-assets.sh
src/xfwm4/: themerc  themerc.in  xfwm4-assets.txt  xfwm4-render-assets.sh
src/xfwm4-dark/: themerc  xfwm4-assets.txt
