option('shell-font', type : 'string', value: 'Roboto',
  description : 'Set font name for gnome-shell theme')

option('icons', type : 'boolean', value : true,
  description : 'Install auxiliary icon theme')

option('icon-theme', type : 'string',
  description : 'Set main icon theme name')

option('gtk3-version', type : 'string',
  description : 'Set gtk3 version to build against it')

option('gnome-version', type : 'string',
  description : 'Set gnome version to build against it')

option('gtk2-solid-menu', type : 'boolean', value : false,
  description : 'Solid borders for gtk2 menus')

option('scale_style', type : 'string', value: 'casual',
  description : 'Set style for scale (casual/fancy)')

option('scrollbar_handles', type : 'string', value: 'no_handles',
  description : 'Set scrollbar slider style')

option('style', type : 'string', value: 'prime',
  description : 'Set style for gtk2/gtk3 theme (prime/flat)')

option('tone', type : 'string', value: 'tango',
  description : 'Set tone for gtk2/gtk3 theme (tango/salsa/rumba/jive)')

option('button_outlines', type : 'string', value: 'strong',
  description : 'Set outline style for regular buttons in a light theme')



option('flatpak', type : 'boolean', value : false,
  description : 'Build theme for flatpak package')

option('flatpak-size', type : 'string',
  description : 'Flatpak size variant (regular/compact)')

option('flatpak-variant', type : 'string',
  description : 'Flatpak variant (light/dark)')
